data/derived/comb/progs/unify/prog4415.ml.out
Characters 232-233:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int * int -> int * int -> bool
       but an expression was expected of type
         int * int -> int * int -> int * int
       Type bool is not compatible with type int * int 
